# altair-lab-api-service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  lab-api-tests.http
.github/workflows/: cd.yml  ci.yml
k8s/: web-proxy.yaml
src/: main.rs
src/auth/: GCP_SCOPES.rs  mod.rs
src/models/: mod.rs  spawn.rs  state.rs
src/routes/: mod.rs  spawn.rs  web.rs  web_shell.rs
src/services/: mod.rs  spawn.rs  web_shell.rs
src/services/web_shell/: terminal_command_event_forwarding_to_sessions_ms.rs  terminal_command_input_capture_and_redaction.rs
src/tests/: health_check.rs  mod.rs  spawn_lab.rs  websocket.rs
