[package]
name = "altair-lab-api-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
# gcp_auth = "0.12.6" I wanna kms, I have implemented authentication twice and apparently the fucking kube crate handles it for you
kube = {version = "2.0.1", features = ["runtime", "derive", "ws"]}
k8s-openapi = {version = "0.26.1", features = ["latest"]}
uuid = { version = "1.19.0", features = ["v4", "serde"] }
futures = "0.3.31"