[package]
name = "altair-lab-api-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Kubernetes
kube = { version = "3", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.27", features = ["latest"] }

# GCP authentication
gcp_auth = "0.12"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
secrecy = "0.10"
rustls-pemfile = "2.2.0"
